--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Culture Connect</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="styles.css" rel="stylesheet">
-    <script defer src="script.js"></script>
+    <link href="src/style/style.css" rel="stylesheet">
+    <script defer src="src/script/script.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
