--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Culture Connect</title>
+    <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link href="src/style/style.css" rel="stylesheet">
-    <script defer src="src/script/script.js"></script>
+    <!-- css -->
+    <link href="./src/style/style.css" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
@@ -31,48 +32,28 @@
         <div class="container">
             <h1 class="display-4">Jelajahi Budaya Nusantara</h1>
             <p class="lead">Temukan tempat wisata budaya terbaik di Indonesia</p>
-            <div class="input-group w-50 mx-auto">
+            <form id="searchForm" class="input-group w-75 mx-auto flex-nowrap">
                 <input type="text" id="searchBox" class="form-control" placeholder="Cari destinasi...">
-                <span class="input-group-text"><i class="fas fa-search"></i></span>
-            </div>
+                <select id="filterCategory" class="form-select w-auto">
+                    <option value="">Semua Provinsi</option>
+                    <option value="Jawa Tengah">Jawa Tengah</option>
+                    <option value="Jawa Timur">Jawa Timur</option>
+                    <option value="Bali">Bali</option>
+                    <option value="NTB">NTB</option>
+                </select>
+                <button class="btn btn-light" type="submit"><i class="fas fa-search"></i></button>
+            </form>
+            
         </div>
     </header>
 
-    <section id="destinasi" class="container my-5">
-        <h2 class="text-center">Destinasi Populer</h2>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/borobudur.jpg" class="card-img-top" alt="Candi Borobudur">
-                    <div class="card-body">
-                        <h5 class="card-title">Candi Borobudur</h5>
-                        <p class="card-text">Salah satu keajaiban dunia yang terletak di Magelang, Jawa Tengah.</p>
-                        <a href="#" class="btn btn-primary">Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/prambanan.jpg" class="card-img-top" alt="Candi Prambanan">
-                    <div class="card-body">
-                        <h5 class="card-title">Candi Prambanan</h5>
-                        <p class="card-text">Kompleks candi Hindu terbesar di Indonesia dengan arsitektur megah.</p>
-                        <a href="#" class="btn btn-primary">Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/tanah_lot.jpg" class="card-img-top" alt="Tanah Lot">
-                    <div class="card-body">
-                        <h5 class="card-title">Tanah Lot</h5>
-                        <p class="card-text">Pura unik di Bali yang terletak di atas batu karang di tepi laut.</p>
-                        <a href="#" class="btn btn-primary">Selengkapnya</a>
-                    </div>
-                </div>
-            </div>
+    <div id="destinasiElement">
+        <div class="placeholder search-loading d-none">Loading...</div>
+    
+        <div id="destination-list">
+            <!-- Isi kartu destinasi akan muncul di sini -->
         </div>
-    </section>
+    </div>
 
     <section id="testimoni" class="container my-5 text-center">
         <h2>Apa Kata Mereka?</h2>
@@ -110,6 +91,8 @@
         <p>&copy; 2025 Culture Connect | Jelajahi Keindahan Budaya</p>
     </footer>
 
+    <!-- scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="src/app.js"></script>
 </body>
 </html>
